Added a direction message

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 </head>
 <body>
+    <p>Please type any minus signs and brackets in the box below.</p>
     <input id="input-box"></input>
     <div id="results-container">
         <div class="header-field">char</div>
