--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <p>Please type any minus signs and brackets in the box below.</p>
-    <input id="input-box"></input>
+    <input id="input-box">
     <div id="results-container">
         <div class="header-field">char</div>
         <div class="header-field">charCode</div>
